src/objects/employees__c.object
<CustomObject>
    <description>emp details</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>employees</relationshipLabel>
        <relationshipName>employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>employees</relationshipLabel>
        <relationshipName>employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bank__c</fullName>
        <label>bank</label>
        <referenceTo>bank__c</referenceTo>
        <relationshipLabel>employees</relationshipLabel>
        <relationshipName>employees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <referenceTo>department__c</referenceTo>
        <relationshipLabel>employees</relationshipLabel>
        <relationshipName>employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>doj__c</fullName>
        <label>doj</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>e_name__c</fullName>
        <label>e.name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exp__c</fullName>
        <formula>(TODAY()  -  doj__c )/365</formula>
        <label>exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>salary__c</fullName>
        <label>salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <formula>TEXT( YEAR( doj__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>year</label>
        <type>Text</type>
    </fields>
    <label>employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>e-{000}</displayFormat>
        <label>e.no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>employees</pluralLabel>
    <recordTypes>
        <fullName>my</fullName>
        <active>true</active>
        <label>my</label>
    </recordTypes>
    <recordTypes>
        <fullName>my1</fullName>
        <active>true</active>
        <label>my1</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ename</fullName>
        <active>false</active>
        <errorConditionFormula>e_name__c  =  UPPER( e_name__c )</errorConditionFormula>
        <errorDisplayField>e_name__c</errorDisplayField>
        <errorMessage>e-name is in upper case write in lower case</errorMessage>
    </validationRules>
</CustomObject>